--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "bootstrap": "^5.1.0",
     "core-js": "^3.6.5",
+    "fontawesome": "^5.6.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
